0030866: Visualization - remove map of AIS_Manipulator from ViewerText

ViewerTest_MapOfAISManipulators and ViewerTest_AISManipulator have been removed from ViewerTest